<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/aboutFragment"
        android:icon="@drawable/abouticon"
        android:title="@string/about_label" />
    <item
        android:id="@+id/action_titleFragment_to_mentalHealthAwareness2"
        android:icon="@drawable/awareness"
        android:title="@string/awareness_label" />
    <item
        android:id="@+id/discussionFragment"
        android:icon="@drawable/discussion"
        android:title="@string/discussion_label" />
    <item
        android:id="@+id/linksFragment2"
        android:icon="@drawable/links"
        android:title="@string/helpful_label" />
    <item
        android:id="@+id/sexHealthAwareness"
        android:icon="@drawable/sexhealth"
        android:title="@string/awareness_label1" />


</menu>