<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="194dp"
        android:layout_height="177dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/myths2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="423dp"
        android:layout_height="254dp"
        app:cardBackgroundColor="@color/appicon_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.138">

        <TextView
            android:id="@+id/mheader"
            style="@style/cardHeaderTextStyle"
            android:layout_width="407dp"
            android:layout_height="115dp"
            android:layout_gravity="clip_horizontal|center|center_horizontal|top"
            android:background="@color/startColor"
            android:text="@string/m1header"
            android:textAlignment="center"
            android:textColor="@color/appicon2_background" />

        <TextView
            android:id="@+id/mcontent"
            style="@style/cardContentTextStyle"
            android:layout_width="416dp"
            android:layout_height="132dp"
            android:layout_gravity="bottom|center"
            android:text="@string/m1content"
            android:textAlignment="center" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/mythsButton"
        style="@style/stylesbutton"
        android:layout_width="418dp"
        android:layout_height="49dp"
        android:background="@color/colorPrimary1"
        android:text="@string/tab_text_2"
        android:textColor="@color/appicon_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.387" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>