<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="179dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221">

        <ImageView
            android:id="@+id/awareness_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/awareness" />

        <TextView
            android:id="@+id/textlabel1"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary1"
            android:text="@string/awareness_label"
            android:textColor="@color/appicon_background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="179dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/cardView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221">

        <ImageView
            android:id="@+id/panel_image"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:src="@drawable/discussion" />

        <TextView
            android:id="@+id/textlabel2"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary1"
            android:text="@string/discussion_label"
            android:textColor="@color/appicon_background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="179dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1"
        app:layout_constraintVertical_bias="0.258">

        <ImageView
            android:id="@+id/help_image"
            android:layout_width="169dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:src="@drawable/links" />

        <TextView
            android:id="@+id/textlabel3"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary1"
            android:text="@string/helpful_label"
            android:textColor="@color/appicon_background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="179dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.259">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sexhealth" />

        <TextView
            android:id="@+id/textlabel4"
            style="@style/textStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary1"
            android:text="@string/awareness_label1"
            android:textColor="@color/appicon_background"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>